@@ -36,6 +36,7 @@
  */
 
 #include "global.h"
+#include "build.h"		/* for rebuild() */
 #include <stdlib.h>
 #if defined(USE_NCURSES) && !defined(RENAMED_NCURSES)
 #include <ncurses.h>
